Fix issue where bamboo images were overlapping register button, preventing it from being clicked.

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -114,6 +114,7 @@ body {
         height: 111%;
         bottom: -14px;
         left: -29px;
+        z-index: -999;
       }
       
       .bamboo-single-image {
@@ -124,6 +125,7 @@ body {
         right: -100;
         height: 110%;
         top: -15px;
+        z-index: -999;
       }
     }
     
